[S14P31E103-30] BE/chore: Spotless 포맷을 Google AOSP(4칸 들여쓰기)로 변경
- googleJavaFormat('1.28.0').aosp() 적용
- 전체 소스 재포맷
- 컨벤션 문서에 AOSP 반영 및 IntelliJ 연동 가이드 보강

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>